Track both eastbound and westbound metro schedules.

--- a/src/dashboard/templates/dashboard/index.html
+++ b/src/dashboard/templates/dashboard/index.html
@@ -3,11 +3,12 @@
 {% block content %}
 <img src="http://10.28.112.17/munin/nilpc206/nilpc206-uptime-month.png" />
 
+<pre>
 http://www.alistapart.com/articles/previewofhtml5
-
 https://localhost/monit/_status?format=xml
 http://www.fogcreek.com/FogBugz/docs/60/topics/advanced/API.html
 http://nrg.wustl.edu/hudson/rssAll?flavor=rss20
 http://nrg.wustl.edu/hudson/job/xnat_dev_1/1542/api/json
 https://10.28.112.17/hg/cnda_xnat/rss-log
+</pre>
 {% endblock %}
