--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,15 +1,26 @@
 {% load travel_tags %}
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/blueprint/screen.css" type="text/css" media="screen, projection">
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/blueprint/print.css" type="text/css" media="print">
 <!--[if lt IE 8]>
   <link rel="stylesheet" href="{{ MEDIA_URL }}css/blueprint/ie.css" type="text/css" media="screen, projection">
 <![endif]-->
+<link rel="stylesheet" href="{{ MEDIA_URL }}css/custom.css" type="text/css" media="screen, projection">
+
+<title>{% block title %}dashboard{% endblock %}
+
 </head>
 <body>
-<div class="container">
 
+<header class="container">
+    <h1>Dashboard</h1>
+</header>
+
+<div class="container">
     <div class="prepend-2 span-14">
 	{% block content %}
 	{% endblock %}
