--- a/src/travel/templates/travel/upcoming_departures_widget.html
+++ b/src/travel/templates/travel/upcoming_departures_widget.html
@@ -1,8 +1,16 @@
 <h4>Upcoming Metro Departures</h4>
-From Central West End, Eastbound:
-<ul>
-{% for departure in departures %}
-    <li>{{ departure.time }}</li>
-{% endfor %}
-</ul>
-<a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&msid=107454192692574985053.00043afad05f0a0327d1e&z=11&om=1">google map</a>
+<div class="clock">{% now "h:i a" %}</div>
+From Central West End (<a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&msid=107454192692574985053.00043afad05f0a0327d1e&z=11&om=1">map</a>)
+<table>
+    <tr>
+        <th>East</th>
+	<th>West</th>
+    </tr>
+    {% for departure in departures %}
+        <tr>
+	    <td>{{ departure.east.time }}</td>
+	    <td>{{ departure.west.time }}</td>
+	</tr>
+    {% endfor %}
+</table>
+
