Make the django apps' versions available in the template.

--- a/src/dashboard/templates/dashboard/index.html
+++ b/src/dashboard/templates/dashboard/index.html
@@ -9,6 +9,13 @@
     </ul>
 </section>
 
+<section>
+    {% for version in versions %}
+    
+    {% endfor %}
+</section>
+
+
 <img src="http://10.28.112.17/munin/nilpc206/nilpc206-uptime-month.png" />
 
 <pre>
