--- a/src/static/css/custom.css
+++ b/src/static/css/custom.css
@@ -1,3 +1,15 @@
+h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 0em;
+}
+
+.streamKey {
+    /*-webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);*/
+    font-weight: bold;
+    vertical-align: top;
+    text-align: center;
+}
+
 .clock {
     font-size: 20pt;
     font-weight: bold;
