Countdown tool for listing days until a certain event.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -27,6 +27,7 @@
     </div>
     <aside class="span-6 last">
         {% links_widget %}
+        {% countdowns_widget %}
 	{% upcoming_departures 5 %}
 	{% versions_widget %}
     </aside>
