Dark theme for the dashboard using some cool CSS3 features (border-radius & font-face).
Including the free Fontin and Fontin Sans by Jos Buivenga (www.exljbris.com).

--- a/src/dashboard/templates/dashboard/countdowns_widget.html
+++ b/src/dashboard/templates/dashboard/countdowns_widget.html
@@ -1,13 +1,15 @@
-<h4>Countdowns</h4>
-<table>
-    <tr>
-        <th>Days Left</th>
-	<th>Title</th>
-    </tr>
-    {% for countdown in countdowns %}
-    <tr>
-        <td>{{ countdown.until.days }}</td>
-	<td>{{ countdown.title }}</td>
-    </tr>
-    {% endfor %}
-</table>
+<div class="widget">
+    <h4>Countdowns</h4>
+    <table>
+        <tr>
+            <th>Days Left</th>
+	    <th>Title</th>
+        </tr>
+        {% for countdown in countdowns %}
+	<tr>
+            <td>{{ countdown.until.days }}</td>
+	    <td>{{ countdown.title }}</td>
+	</tr>
+	{% endfor %}
+    </table>
+</div>
