--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,7 +9,7 @@
 <!--[if lt IE 8]>
   <link rel="stylesheet" href="{{ MEDIA_URL }}css/blueprint/ie.css" type="text/css" media="screen, projection">
 <![endif]-->
-<link rel="stylesheet" href="{{ MEDIA_URL }}css/custom.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="{{ MEDIA_URL }}css/dashboard.css" type="text/css" media="screen, projection">
 
 <title>{% block title %}dashboard{% endblock %}
 
