--- a/src/travel/templates/travel/upcoming_departures_widget.html
+++ b/src/travel/templates/travel/upcoming_departures_widget.html
@@ -1,16 +1,17 @@
-<h4>Upcoming Metro Departures</h4>
-<div class="clock">{% now "h:i a" %}</div>
+<div class="widget">
+    <h4>Upcoming Metro Departures</h4>
+    <div class="clock">{% now "h:i a" %}</div>
 From Central West End (<a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&msid=107454192692574985053.00043afad05f0a0327d1e&z=11&om=1">map</a>)
-<table>
-    <tr>
-        <th>East</th>
-	<th>West</th>
-    </tr>
-    {% for departure in departures %}
+    <table>
         <tr>
-	    <td>{{ departure.east.time }}</td>
-	    <td>{{ departure.west.time }}</td>
+            <th>East</th>
+	    <th>West</th>
 	</tr>
-    {% endfor %}
-</table>
-
+	{% for departure in departures %}
+            <tr>
+	        <td>{{ departure.east.time }}</td>
+		<td>{{ departure.west.time }}</td>
+	    </tr>
+	{% endfor %}
+    </table>
+</div>
