--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,6 +11,14 @@
 <![endif]-->
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/dashboard.css" type="text/css" media="screen, projection">
 
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/jquery.lightbox-0.5.css" media="screen" />
+
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.lightbox-0.5.js"></script>
+
+<script type="text/javascript" src="{{ MEDIA_URL }}js/dashboard.js"></script>
+
+
 <title>{% block title %}dashboard{% endblock %}
 
 </head>
