--- a/src/static/css/dashboard.css
+++ b/src/static/css/dashboard.css
@@ -61,3 +61,8 @@ h1, h2, h3, h4, h5, h6 {
 .widget h4 {
     text-align: center;
 }
+
+.compactTable td {
+    padding: 0 4px 0 4px;
+    vertical-align: top;
+}
