Added a footer and a github ribbon (http://github.com/blog/273-github-ribbons).

--- a/src/static/css/dashboard.css
+++ b/src/static/css/dashboard.css
@@ -21,7 +21,11 @@ header {
     text-align: center;
 }
 
-a {
+footer {
+    text-align: center;
+}
+
+a, a:visited {
     color: #f00;
     text-decoration: none;
 }
