--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -25,6 +25,8 @@
 <body>
 
 <header class="container">
+    <!--<a href="http://github.com/johnpaulett/dashboard"><img style="position: absolute; top: 0; left: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub" /></a>-->
+    <a href="http://github.com/johnpaulett/dashboard"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
     <h1>Dashboard</h1>
 </header>
 
@@ -41,6 +43,10 @@
     </aside>
 </div>
 
-</div>
+<footer class="container">
+
+    powered by <a href="http://github.com/johnpaulett/dashboard">dashboad</a>.
+    <a href="http://johnpaulett.com">John Paulet</a>
+</footer>
 </body>
 </html>
