Center the munin images.

--- a/src/dashboard/templates/dashboard/remote_images_widget.html
+++ b/src/dashboard/templates/dashboard/remote_images_widget.html
@@ -2,7 +2,7 @@
 
 <div class="widget">
     <h4>Munin</h4>
-    <div>
+    <div class="muninWidget">
         {% for image in images %}
 	    <div class="galleryImage">
                 {% if image.image %}
